--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ llama-index==0.14.0
 llama-index-embeddings-huggingface==0.6.1
 llama-index-llms-groq==0.4.1
 llama-index-vector-stores-chroma==0.5.3
+sacrebleu
+rouge-score
+sentence-transformers
